...
            
            statisticService?.store(correct: correctCount, total: self.questionsAmount)
            guard let gamesCount = statisticService?.gamesCount else {return}
            guard let bestGame = statisticService?.bestGame else {return}
            guard let totalAccuracy = statisticService?.totalAccuracy else {return}
            
            let viewModel = AlertModel(title: "Этот раунд закончен",
                                       text: "Ваш результат: \(correctCount)/\(self.questionsAmount)\nКоличество сыгранных квизов: \(gamesCount)\nРекорд: \(bestGame.correct)/\(bestGame.total) \(bestGame.date.dateTimeString) \nСредняя точность: \(String(format: "%.2f", totalAccuracy))%",
                                       buttonText: "Сыграть еще раз") {
                
                self.resetQuestionIndex()
                self.correctCount = 0
                self.questionFactory?.requestNextQuestion()
...
